add lettuce, tiered compiler, G1GC vs (Generational) ZGC, cassandra data model